# Lucignolo

./: LICENSE  README.md  pyproject.toml
examples/: main.py
examples/MIMo/: mimo_ctrl.ipynb  mimo_ctrl.py
examples/MIMo/assets/: control.xml  control_meta.xml
examples/MIMo/assets/mimo/: MIMo_model.xml  MIMo_modelv2.xml
lucignolo/: __init__.py
lucignolo/controllers/: __init__.py  base.py  invdyn_ctrl.py  jnt_ctrl.py  multi_ctrl.py
lucignolo/core/: __init__.py  eef_point.py  frames.py  timers.py  utils.py
lucignolo/fields/: __init__.py  base.py  factory.py  utils.py
lucignolo/fields/implementations/: __init__.py  force_fields.py  velocity_fields.py
lucignolo/trajectory/: mocap_traj_ctrl.py  toys_path.py
src/controllers/: __init__.py  invdyn_ctrl.py  jnt_ctrl.py  multi_ctrl.py
src/core/: __init__.py  eef_point.py  frames.py
src/fields/: __init__.py  base.py  factory.py
src/fields/implementations/: force_fields.py  velocity_fields.py
src/trajectory/: __init__.py  mocap_traj_ctrl.py
tests/: test_imports.py
